@startuml household

class Household {
    - id
    - localFamilyName
    - localFirstName
    - enFamilyName
    - enFirstName
    - dependents
    - vulnerabilities
    - projects
    - beneficiaries
    - countrySpecificAnswers
    - livelihood
    - notes
    - incomeLevel
    - foodConsumptionScore
    - copingStrategiesIndex
    - currentHouseholdLocation
    - residentHouseholdLocation
}

class Livelihood {
    - id
    - name
}

class CountrySpecificAnswer {
    - countrySpecific
    - answer
}

class CountrySpecific {
    - id
    - field
    - type
    - answer
    - countryIso3
    - name
}

class CountrySpecificType {
    - id
    - name
}

class HouseholdLocationGroup {
    - id
    - name
}

class HouseholdLocationType {
    - id
    - name
}

class HouseholdLocation {
    - id
    - locationGroup
    - type
    - address
    - campAddress
}

class Address {
    - id
    - number
    - street
    - postcode
    - location
}

class CampAddress {
    - id
    - tentNumber
    - camp
}

class Camp {
    - id
    - name
    - location
}

class Location {
    - id
    - adm1
    - adm2
    - adm3
    - adm4
    - countryIso3
}

class Adm {
    - id
    - name
}
 
 CountrySpecificType "1" *-- "1" CountrySpecific
 CountrySpecific "1" *-- "1" CountrySpecificAnswer
 
 Livelihood "1" *-- "0-*" Household
 VulnerabilityCriteria "0-*" *-- "0-*" Household
 Project "1-*" o-- "0-*" Household
 Beneficiary "1-*" *-- "1" Household
 CountrySpecificAnswer "0-*" *-- "1" Household
 HouseholdLocation "2" *-- "1" Household
 HouseholdLocationGroup "1" *-- "0-*" HouseholdLocation
 HouseholdLocationType "1" *-- "0-*" HouseholdLocation
 Address "0-1" *-- "1" HouseholdLocation
 Address "0-*" *-- "1" Location
 CampAddress "0-1" *-- "1" HouseholdLocation
 CampAddress "0-*" *-- "1" Camp
 Camp "0-*" *-- "1" Location

 Project "0-*" *-- "1" HouseholdFilters
 VulnerabilityCriteria "0-*" *-- "1" HouseholdFilters
 Location "0-*" *-- "1" HouseholdFilters
 
 Adm "0-4" *-- "1" Location
@enduml